[dev] refractor